@@ -18,7 +18,6 @@ import uk.ac.ceh.gateway.catalogue.serviceagreement.ServiceAgreement;
 import java.time.ZoneId;
 import java.util.*;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.regex.Pattern.CASE_INSENSITIVE;
@@ -123,30 +122,30 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
     public List<Keyword> getAllKeywords() {
         return Stream.of(
             keywordsFromDescriptiveKeywords(),
-            Optional.ofNullable(keywordsDiscipline).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsInstrument).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsObservedProperty).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsPlace).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsProject).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsTheme).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsOther).orElse(Collections.emptyList())
+            Optional.ofNullable(keywordsDiscipline).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsInstrument).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsObservedProperty).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsPlace).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsProject).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsTheme).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsOther).orElseGet(Collections::emptyList)
         )
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<Keyword> keywordsFromDescriptiveKeywords() {
         return Optional.ofNullable(descriptiveKeywords)
-            .orElse(Collections.emptyList())
+            .orElseGet(Collections::emptyList)
             .stream()
             .flatMap(dk -> dk.getKeywords().stream())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
     public GeminiDocument addAdditionalKeywords(List<Keyword> additionalKeywords) {
         descriptiveKeywords = Optional.ofNullable(descriptiveKeywords)
-                .orElse(new ArrayList<>());
+            .orElseGet(ArrayList::new);
 
         descriptiveKeywords.add(
                 DescriptiveKeywords
@@ -170,7 +169,7 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
 
     public List<OnlineResource> getOnlineResources() {
         return Optional.ofNullable(onlineResources)
-            .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     @JsonIgnore
@@ -179,7 +178,7 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
         return getOnlineResources()
             .stream()
             .filter(onlineResource -> downloadRoles.contains(onlineResource.getFunction()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -190,22 +189,14 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
      */
     @JsonIgnore
     public String getMapViewerUrl() {
-        val possibleWms = Optional.ofNullable(onlineResources)
-                .orElse(Collections.emptyList())
-                .stream()
-                .filter(onlineResource -> onlineResource.getType().equals(WMS_GET_CAPABILITIES))
-                .filter(onlineResource -> WMS_ONLINE_RESOURCE.matcher(onlineResource.getUrl()).matches())
-                .findFirst();
-
-        if (possibleWms.isPresent()) {
-            val onlineResource = possibleWms.get();
-            log.debug(onlineResource.toString());
-            val matcher = WMS_ONLINE_RESOURCE.matcher(onlineResource.getUrl());
-            log.debug("matches {}, group 1: {}", matcher.matches(), matcher.group(1));
-            val id = matcher.group(1);
-            return "/maps#layers/" + id;
-        }
-        return null;
+        return Optional.ofNullable(onlineResources)
+            .orElseGet(Collections::emptyList)
+            .stream()
+            .filter(onlineResource -> onlineResource.getType().equals(WMS_GET_CAPABILITIES))
+            .flatMap(onlineResource -> WMS_ONLINE_RESOURCE.matcher(onlineResource.getUrl()).results())
+            .findFirst()
+            .map(matchResult -> "/maps#layers/" + matchResult.group(1))
+            .orElse(null);
     }
 
     @JsonIgnore
@@ -215,33 +206,31 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
 
     public List<String> getTopics() {
         return Optional.ofNullable(keywordsTheme)
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(Keyword::getUri)
-                .filter(uri -> uri.startsWith(TOPIC_PROJECT_URL))
-                .collect(Collectors.toList());
+            .orElseGet(Collections::emptyList)
+            .stream()
+            .map(Keyword::getUri)
+            .filter(uri -> uri.startsWith(TOPIC_PROJECT_URL))
+            .toList();
     }
 
     public List<String> getCoupledResources() {
-        return Optional.ofNullable(service)
-                .map(Service::getCoupledResources)
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(Service.CoupledResource::getIdentifier)
-                .filter(cr -> !cr.isEmpty())
-                .collect(Collectors.toList());
+        return Stream.ofNullable(service)
+            .flatMap(s -> s.getCoupledResources().stream())
+            .map(Service.CoupledResource::getIdentifier)
+            .filter(cr -> !cr.isEmpty())
+            .toList();
     }
 
     public List<ResponsibleParty> getResponsibleParties() {
         return Optional.ofNullable(responsibleParties)
-                .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
-    private List<ResponsibleParty>responsiblePartyByRole(String role) {
+    private List<ResponsibleParty> responsiblePartyByRole(String role) {
         return getResponsibleParties()
             .stream()
-            .filter((responsibleParty) -> responsibleParty.getRole().equalsIgnoreCase(role))
-            .collect(Collectors.toList());
+            .filter(responsibleParty -> responsibleParty.getRole().equalsIgnoreCase(role))
+            .toList();
     }
 
     public List<ResponsibleParty> getAuthors() {
@@ -266,45 +255,45 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
 
     public List<DistributionInfo> getDistributionFormats() {
         return Optional.ofNullable(distributionFormats)
-            .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     public List<BoundingBox> getBoundingBoxes() {
         return Optional.ofNullable(boundingBoxes)
-            .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     public List<Funding> getFunding() {
         return Optional.ofNullable(funding)
-                .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     public List<Supplemental> getSupplemental() {
         return Optional.ofNullable(supplemental)
-                .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     @Override
     public @NonNull List<String> getWKTs() {
         return Optional.ofNullable(boundingBoxes)
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(BoundingBox::getWkt)
-                .collect(Collectors.toList());
+            .orElseGet(Collections::emptyList)
+            .stream()
+            .map(BoundingBox::getWkt)
+            .toList();
     }
 
     @JsonIgnore
     public @NonNull List<String> getBounds() {
         return Optional.ofNullable(boundingBoxes)
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(BoundingBox::getBounds)
-                .collect(Collectors.toList());
+            .orElseGet(Collections::emptyList)
+            .stream()
+            .map(BoundingBox::getBounds)
+            .toList();
     }
     public long getIncomingCitationCount() {
         return Optional.ofNullable(incomingCitations)
-            .orElse(Collections.emptyList())
-            .size();
+            .map(List::size)
+            .orElse(0);
     }
 
 }
